--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="Drapeau icon.png" />
+    <link rel="shortcut icon" type="image/png" href="drapeau_icon.png">
     <link rel="stylesheet" href="style.css">
     <title> Calendrier </title>
 </head>
