--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         </div>
     </article>
 </section>
+<footer>
+    <p> Copyright © 2022&nbsp; </p> 
+    <div>
+        <p> DEBUT&nbsp; </p>
+        <p> LOIC </p>
+    </div>
+    <p> &nbsp;Tous droits réservés. </p>
+</footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="calendrier-republicain/index.js"></script>
 <script>
