--- a/index.html
+++ b/index.html
@@ -6,6 +6,139 @@
     <link rel="shortcut icon" type="image/png" href="drapeau_icon.png">
     <link rel="stylesheet" href="style.css">
     <title> Calendrier </title>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+@font-face {
+    font-family: 'XVIIIe';
+    src: url('font/ShelleyAndanteBT.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'attache';
+    src: url('font/Rochester.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'canal';
+    src: url('font/Futura Bold.otf') format('truetype');
+}
+
+body {
+    font-family: 'Luxurious Roman', cursive;
+    font-size: 24px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+section {
+    display: flex;
+}
+article {
+    text-align: center;
+    width: 100%;
+}
+h1, h2, h3, h4, p, small {
+    margin: 0;
+}
+#republic {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#republic > p {
+    font-family: 'attache';
+}
+.jourR {
+    font-size: 2.5rem;
+}
+.dateR {
+    font-size: 8rem;
+}
+.hR {
+    font-size: 3rem;
+}
+#gregorien {
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+}
+#gregorien > h1 {
+    font-size: 2rem;
+}
+#gregorien > p {
+    font-style: italic;
+}
+footer {
+    font-size: 1rem;
+    position: absolute;
+    left: 50%;
+    display: flex;
+    transform: translate(-50%, -50%);
+}
+footer > div {
+    display: flex;
+    justify-content: space-evenly;
+    width: 104px;
+    background: linear-gradient(to right, #03224c 58%, #fcddb3 50%);
+}
+footer > div > p {
+    font-family: 'canal';
+}
+footer > div > p:first-child {
+    color: #fcddb3;
+}
+footer > div > p:last-child {
+    color: #03224c;
+}
+@media all and (max-width: 1623px) {
+    .dateR {
+        font-size: 7rem;
+    }
+}
+@media all and (max-width: 1420px) {
+    .dateR {
+        font-size: 6rem;
+    }
+}
+@media all and (max-width: 1217px) {
+    .dateR {
+        font-size: 5rem;
+    }
+}
+@media all and (max-width: 1014px) {
+    .dateR {
+        font-size: 4rem;
+    }
+}
+@media all and (max-width: 811px) {
+    .dateR {
+        font-size: 3rem;
+    }
+}
+@media all and (max-width: 610px) {
+    .dateR {
+        font-size: 2.5rem;
+    }
+    .hR, .jourR {
+        font-size: 1.5rem;
+    }
+    #gregorien > h1 {
+        font-size: 1.75rem;
+    }
+    #gregorien > p {
+        font-size: 1.25rem;
+    }
+}
+</style>
 </head>
 <body>
 <section>
