--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ footer > div > p:last-child {
 <section id="conversion">
     <article>
         <div id="gregorien">
-            <h1> CONVERSION RÉPUBLICAINE</h1>
+            <h1> CONVERSION RÉPUBLICAINE <span></span></h1>
 
             <input type="datetime-local" id="input_date">
 
