--- a/index.html
+++ b/index.html
@@ -1,270 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="drapeau_icon.png">
-    <link rel="stylesheet" href="style.css">
-    <title> Calendrier </title>
-<!-- <style>
-@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-@font-face {
-    font-family: 'XVIIIe';
-    src: url('font/ShelleyAndanteBT.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'attache';
-    src: url('font/Rochester.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'canal';
-    src: url('font/Futura Bold.otf') format('truetype');
-}
-
-body {
-    font-family: 'Luxurious Roman', cursive;
-    font-size: 24px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-section {
-    display: flex;
-}
-article {
-    text-align: center;
-    width: 100%;
-}
-h1, h2, h3, h4, p, small {
-    margin: 0;
-}
-#republic {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-#republic > p {
-    font-family: 'attache';
-}
-.jourR {
-    font-size: 2.5rem;
-}
-.dateR {
-    font-size: 8rem;
-}
-.hR {
-    font-size: 3rem;
-}
-#gregorien {
-    left: 0;
-    right: 0;
-    margin: auto;
-    position: absolute;
-}
-#gregorien > h1 {
-    font-size: 2rem;
-}
-#gregorien > p {
-    font-style: italic;
-}
-footer {
-    font-size: 1rem;
-    position: absolute;
-    left: 50%;
-    display: flex;
-    transform: translate(-50%, -50%);
-}
-footer > div {
-    display: flex;
-    justify-content: space-evenly;
-    width: 104px;
-    background: linear-gradient(to right, #03224c 58%, #fcddb3 50%);
-}
-footer > div > p {
-    font-family: 'canal';
-}
-footer > div > p:first-child {
-    color: #fcddb3;
-}
-footer > div > p:last-child {
-    color: #03224c;
-}
-@media all and (max-width: 1623px) {
-    .dateR {
-        font-size: 7rem;
-    }
-}
-@media all and (max-width: 1420px) {
-    .dateR {
-        font-size: 6rem;
-    }
-}
-@media all and (max-width: 1217px) {
-    .dateR {
-        font-size: 5rem;
-    }
-}
-@media all and (max-width: 1014px) {
-    .dateR {
-        font-size: 4rem;
-    }
-}
-@media all and (max-width: 811px) {
-    .dateR {
-        font-size: 3rem;
-    }
-}
-@media all and (max-width: 610px) {
-    .dateR {
-        font-size: 2.5rem;
-    }
-    .hR, .jourR {
-        font-size: 1.5rem;
-    }
-    #gregorien > h1 {
-        font-size: 1.75rem;
-    }
-    #gregorien > p {
-        font-size: 1.25rem;
-    }
-}
-</style> -->
+    <!-- <link rel="shortcut icon" type="image/png" href="drapeau_icon.png"> -->
+    <link rel="stylesheet" href="style/style.css">
+    <script src="script/jquery_3.7.1.min.js"></script>
+    <script src="script/index.js"></script>
+    <script src="script/conversion.js"></script>
+    <title>Calendrier Républicaine</title>
 </head>
 <body>
-<section id="direct">
-    <article>
+    <section id="direct">
         <div id="gregorien">
-            <h1></h1>
-            <small></small>
-            <p class="dateW"></p>
-            <p class="hW"></p>
+            <h1>CALENDRIER RÉPUBLICAIN <span> <!-- année républicaine --> </span></h1>
+            <p class="date"> <!-- date --> mon cul </p>
+            <p class="heure"> <!-- heure --> lol </p>
         </div>
         <div id="republic">
-            <p class="jourR"></p>
-            <p class="dateR"></p>
-            <p class="hR"></p>
+            <p class="fete"> <!-- fête du jour --> Ruche </p>
+            <p class="date"> <!-- date --> grocul </p>
+            <p class="heure"> <!-- heure --> RE-grocul </p>
         </div>
-    </article>
-</section>
-<section id="sect_conv">
-   <a href="#conversion"> <button id="button_conv"> Conversion </button> </a>
-</section>
-<section id="conversion">
-    <article>
-        <div id="gregorien">
-            <h1> CONVERSION RÉPUBLICAINE <span></span></h1>
-
-            <input type="datetime-local" id="input_date">
-
-        </div>
-        <div id="republic">
-            <p class="jourC"></p>
-            <p class="dateC"></p>
-            <p class="hC"></p>
-        </div>
-    </article>
-</section>
-<section id="sect_direct">
-   <a href="#direct"> <button id="button_direct"> Calendrier </button> </a>
-</section>
-<footer>
-    <p> Copyright © 2022&nbsp; </p> 
-    <div>
-        <p> DEBUT&nbsp; </p>
-        <p> LOIC </p>
-    </div>
-    <p> &nbsp;Tous droits réservés. </p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="calendrier-republicain/index.js"></script>
-<script src="script/conversion.js"></script>
-<script>
-$('#sect_conv').css('bottom',$('footer').height()+"px")
-$('#sect_direct').css('top',($(document).height()-$('#sect_direct').height()-$('footer').height())+"px")
-
-$('footer').css('top',$(window).height()-$('footer').height()+"px")
-var date, dateRep, options, horaire, h, min, sec, now, heure, minute, seconde, an, romain;
-function firstLetterUC(mot) {
-mot = mot.split(" ");
-    for (var i = 0; i < mot.length; i++) {
-        if (mot[i] != 'an') {
-            mot[i] = mot[i].charAt(0).toUpperCase() + mot[i].slice(1);
-        }
-    }
-mot = mot.join(" ");
-return mot;
-}
-function dateWorld() {
-date = new Date();
-options = {weekday: "long", year: "numeric", month: "long", day: "2-digit"};
-date.getSeconds()<10 ? sec="0"+date.getSeconds() : sec=date.getSeconds();
-date.getMinutes()<10 ? min="0"+date.getMinutes() : min=date.getMinutes();
-date.getHours()<10 ? h="0"+date.getHours() : h=date.getHours();
-horaire=h+" h "+min+" : "+sec;
-
-$(".dateW").html(firstLetterUC(date.toLocaleDateString('fr',options)));
-$(".hW").html(horaire);
-}
-dateWorld();
-setInterval(dateWorld,1000);
-
-function dateRepublic() {
-switch (date.getTimezoneOffset()) {
-    case -60:
-        date.setHours(date.getHours()-1);
-        dateRep=dayOfDecadeName(date)+' '+dayOfMonth(date)+' '+monthName(date)+' an '+chiffreRomain(year(date));
-        date.setHours(date.getHours()+1);
-        break;
-    
-    default:
-        dateRep=dayOfDecadeName(date)+' '+dayOfMonth(date)+' '+monthName(date)+' an '+chiffreRomain(year(date));
-        break;
-} 
-
-now=(date.getSeconds()+date.getMinutes()*60+date.getHours()*3600)*(1/0.864);
-heure=Math.floor(now/(100*100)) % 10
-minute=Math.floor(now/100) % 100
-seconde=Math.floor(now) % 100
-
-heure < 10 ? heure="0"+heure : heure=heure
-minute < 10 ? minute="0"+minute : minute=minute
-seconde < 10 ? seconde="0"+seconde : seconde=seconde
-horDec=heure+" h "+minute+" : "+seconde;
-
-$('h1').eq(0).html("CALENDRIER RÉPUBLICAIN (an "+year(date)+')')
-$(".dateR").html(firstLetterUC(dateRep));
-$(".hR").html(horDec);
-$(".jourR").html(firstLetterUC(dayOfYearName(date)));
-
-if(month(date) < 4) {
-    $('body').css('background-image','url("parchemin automne.png")');
-}
-else if(month(date) < 7) {
-    $('body').css('background-image','url("parchemin hiver.png")');
-}
-else if(month(date) < 10) {
-    $('body').css('background-image','url("parchemin printemps.png")');
-}
-else if(month(date) < 13) {
-    $('body').css('background-image','url("parchemin été.png")');
-}
-else {
-    $('body').css('background-image','url("parchemin.jpg")');
-}
-}
-dateRepublic();
-setInterval(dateRepublic,1000);
-console.log(month(date))
-</script>
+    </section>
 </body>
 </html>
