Changer les <p> des div #gregorien et #republicain

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="shortcut icon" type="image/png" href="drapeau_icon.png"> -->
-    <link rel="stylesheet" href="style/style.css">
+    <link href="style/style.css" rel="stylesheet">
     <script src="script/jquery_3.7.1.min.js"></script>
     <script src="script/index.js"></script>
-    <script src="script/conversion.js"></script>
+    <script src="script/functions.js"></script>
+    <script src="script/conversion_functions.js"></script>
     <title>Calendrier Républicaine</title>
 </head>
 <body>
     <section id="direct">
         <div id="gregorien">
             <h1>CALENDRIER RÉPUBLICAIN <span> <!-- année républicaine --> </span></h1>
-            <p class="date"> <!-- date --> mon cul </p>
-            <p class="heure"> <!-- heure --> lol </p>
+            <p class="date"> <!-- date --> dateGreg </p>
+            <p class="heure"> <!-- heure --> heureGreg</p>
         </div>
         <div id="republic">
-            <p class="fete"> <!-- fête du jour --> Ruche </p>
-            <p class="date"> <!-- date --> grocul </p>
-            <p class="heure"> <!-- heure --> RE-grocul </p>
+            <p class="fete"> <!-- fête du jour --> feteRep </p>
+            <p class="date"> <!-- date --> dateRep </p>
+            <p class="heure"> <!-- heure --> heureRep </p>
         </div>
     </section>
 </body>
