Ajout menu nav + conversion et calendrier

--- a/index.html
+++ b/index.html
@@ -9,20 +9,38 @@
     <script src="script/index.js"></script>
     <script src="script/functions.js"></script>
     <script src="script/conversion_functions.js"></script>
-    <title>Calendrier Républicaine</title>
+    <title>Calendrier Républicain</title>
 </head>
 <body>
-    <section id="direct">
-        <div id="gregorien">
-            <h1>CALENDRIER RÉPUBLICAIN <span> <!-- année républicaine --> </span></h1>
-            <p class="date"> <!-- date --> dateGreg </p>
-            <p class="heure"> <!-- heure --> heureGreg</p>
-        </div>
-        <div id="republic">
-            <p class="fete"> <!-- fête du jour --> feteRep </p>
-            <p class="date"> <!-- date --> dateRep </p>
-            <p class="heure"> <!-- heure --> heureRep </p>
-        </div>
-    </section>
+    <aside>
+        <nav>
+            <a href="#direct">En Direct</a>
+            <a href="#conversion">Conversion</a>
+            <a href="#calendrier">Calendrier</a>
+        </nav>
+    </aside>
+
+    <main>
+        <section id="direct">
+            <div id="gregorien">
+                <h1>CALENDRIER RÉPUBLICAIN <span> <!-- année républicaine --> </span></h1>
+                <p class="date"> <!-- date --> dateGreg </p>
+                <p class="heure"> <!-- heure --> heureGreg</p>
+            </div>
+            <div id="republic">
+                <p class="fete"> <!-- fête du jour --> feteRep </p>
+                <p class="date"> <!-- date --> dateRep </p>
+                <p class="heure"> <!-- heure --> heureRep </p>
+            </div>
+        </section>
+    
+        <section id="conversion">
+            <p>CONVERSION EN P</p>
+        </section>
+    
+        <section id="calendrier">
+            <p>CALENDRIER EN P</p>
+        </section>
+    </main>
 </body>
 </html>
