--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style/font.css" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
     <script src="script/jquery_3.7.1.min.js"></script>
+    <script src="script/suncalc-global.js"></script>
     <script src="script/index.js"></script>
     <script src="script/functions.js"></script>
     <script src="script/conversion_functions.js"></script>
